HeaderTop for Mobile

--- a/style.css
+++ b/style.css
@@ -54,7 +54,9 @@ cursor: pointer;
 .Element3 img:hover{
 cursor: pointer;
 }
-
+.Element4{
+    display: none;
+}
 
 
 .Search{
@@ -86,4 +88,23 @@ cursor: pointer;
 .CV:hover{
     background: #5f0340;
     cursor: pointer;
+}
+
+
+@media(max-width:768px){
+.Element2{
+    display: none;
+}
+.Element3 .Search, .Element3 img, .Element3 div{
+    display: none;
+}
+.Element1 p{
+    display: none;
+}
+.Element4{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 }
