--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@ p{
 
 .Header{
 width: 100%;
-height: 100vh;
-background: linear-gradient(135deg, #5f0340, #3d177a, #5f0340);
+height: 130vh;
+background: linear-gradient(135deg, #5f0340, #3d177a, #7f0456);
+position: relative;
 }
 .HeaderTop{
     width: 100%;
@@ -26,12 +27,19 @@ background: linear-gradient(135deg, #5f0340, #3d177a, #5f0340);
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
+    position: sticky;
+    top: 0;
 }
 .Element1{
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+.Element1 p{
+    text-shadow: 0 0 10px gray; 
+}
+
 .Element2{
     display: flex;
     justify-content: center;
@@ -68,7 +76,7 @@ cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    padding-left: 10px;
 }
 .AfterSearch{
     width: 3px;
@@ -84,12 +92,192 @@ cursor: pointer;
     border-radius: 50px;
     border: 0px;
     font-weight: bold;
+     cursor: pointer;
 }
 .CV:hover{
     background: #5f0340;
-    cursor: pointer;
 }
 
+.HeaderBottom{
+width: 80%;
+margin: auto;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+padding-top: 30px;
+
+}
+.HBCenter{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+line-height: 2.5;
+color: white;
+position: relative;
+}
+.HBCenter h1{
+font-weight: 900;
+letter-spacing: 2px;
+text-shadow: 0 0 10px gray;    
+}
+
+.FD{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    gap: 20px;
+}
+
+@keyframes opacit {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.ME{
+width: 300px;
+border-radius: 300px;
+border: 5px solid #5f0340;
+box-shadow: 0 0 40px #5f0340;
+animation: opacit 5s infinite ease-in-out;
+}
+
+@keyframes tops {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+
+.STAR{
+    width: 48px;
+position: absolute;
+left: 250px;
+top: 200px;
+animation: tops 4s infinite ease-in-out;
+}
+
+@keyframes opac {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
+.WEB{
+    width: 48px;
+position: absolute;
+right: 200px;
+bottom: 100px;
+animation: opac 4s infinite ease-in-out ;
+}
+.STARS{
+    width: 48px;
+animation: opac 4s infinite  ease-in-out;
+}
+.BUT1{
+width: 220px;
+height: 60px;
+background-color: rgba(0, 0, 0, 0);
+border-radius: 50px;
+border: 3px solid white;
+color: white;
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 10px;
+font-weight: bolder;
+font-size: 15px;
+letter-spacing: 1.5px;
+transition: 1.5s;
+cursor: pointer;
+}
+.BUT2{
+width: 220px;
+height: 60px;
+background-color: rgba(0, 0, 0, 0);
+border-radius: 50px;
+border: 3px solid white;
+color: white;
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 10px;
+font-weight: bolder;
+font-size: 15px;
+letter-spacing: 1.5px;
+transition: 0.5s;
+cursor: pointer;
+}
+.Button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    padding-top: 40px;
+}
+
+.BUT1:hover, .BUT2:hover{
+background-color: white;
+color: #f857a6;
+
+}
+
+.Follow{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding-top: 40px;
+}
+.f1{
+    border-radius: 50px;
+    box-shadow: 0 0 40px rgb(50, 50, 50);
+    cursor: pointer;
+    width: 42px;
+}
+@keyframes to-top {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-20px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+.DOWN{
+    position: absolute;
+    filter: invert(1);
+    width: 42px;
+    bottom: 20px;
+    left: 745px;
+    animation: to-top 2s infinite ease-in-out;
+    cursor: pointer;
+}
 
 @media(max-width:768px){
 .Element2{
