--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@ font-family: Arial, Helvetica, sans-serif;
 }
 body{
     width: 100%;
-    height: 3000px;
+    height: 5000px;
     background-color: #1f2a37;
+    
 }
 p{
     color: white;
@@ -16,9 +17,11 @@ p{
 .Header{
 width: 100%;
 height: 950px;
-background: linear-gradient(135deg, #5f0340, #3d177a, #7f0456);
-position: relative;
+background: linear-gradient(135deg, #7d4500, #3d177a, #7f0456);
+
 }
+
+
 .HeaderTop{
     width: 100%;
     height: 80px;
@@ -27,8 +30,9 @@ position: relative;
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
-    position: sticky;
+    position: fixed;
     top: 0;
+    z-index: 1;
 }
 .Element1{
     display: flex;
@@ -128,6 +132,11 @@ flex-direction: column;
 padding-top: 30px;
 
 }
+
+.MEBOX{
+    margin-top: 70px;
+}
+
 .HBCenter{
 display: flex;
 justify-content: center;
@@ -570,6 +579,30 @@ letter-spacing: 1px;
     flex-wrap: wrap;
     gap: 70px;
 }
+.view{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 100px;
+}
+.view button{
+    width: 200px;
+    height: 50px;
+    background: linear-gradient(to right, #f857a6, #b055ff);
+    border-radius: 50px;
+    font-weight: bolder;
+    border: 0;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.view button:hover{
+transform: scale(1.1);
+transform: translateY(-10px);
+background: #5f0340;
+}
+
+
+
 
 @media(max-width:767px){
 .Header{
