--- a/style.css
+++ b/style.css
@@ -488,7 +488,7 @@ width: 100%;
     width: 100%;
 }
 .Project1{
-    width: 35%;
+    width: 400px;
     height: 600px;
     background-color: #263649;
     border-radius: 20px;
@@ -616,16 +616,22 @@ margin: auto;
 .w1{
     position: absolute;
     right: 200px;
-    top: 120px;
+    top: 90px;
     animation: opac 4s infinite ease-in-out;
 }
 
 .w2{
 position: absolute;
 left: 200px;
-top: 200px;
+top: 140px;
 animation: opac 4s infinite ease-in-out;
 
+}
+.w3{
+    position: absolute;
+    left: 60px;
+    bottom: 40px;
+    animation: opac 4s infinite ease-in-out;
 }
 
 .Mail{
@@ -753,6 +759,27 @@ input::placeholder{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 50px;
+}
+.end{
+    width: 100%;
+    height: 150px;
+    background-color: rgba(0, 0, 0, 0.527);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    line-height: 2;
+    letter-spacing: 1px;
+}
+.end h5{
+    font-size: 20px;
+    font-weight: 500;
+}
+.end p{
+    color: gray;
+    font-weight: 100;
 }
 
 
