Finished for tablet

--- a/style.css
+++ b/style.css
@@ -911,8 +911,7 @@ width: 90%;
     top: 30px;
 }
 .w2{
-    left: 300px;
-    top: 30px;
+  display: none;
 }
 .w3{
     display: none;
@@ -953,6 +952,52 @@ width: 90%;
 .DOWN{
     width: 30px;
 }
+.ABOUT{
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+.FInto{
+    width: 80%;
+    margin: auto;
+ }
+ .Contact{
+   display: grid;
+   grid-template-columns: repeat(1, 1fr);
+   gap: 20px;
+ }
+ .Mail{
+    width: 100%;
+ }
+.Mail h3{
+    font-size: 15px;
+}
+.ContactMe{
+    width: 100%;
+}
+.ContactMe input{
+width: 90%;
+}
+.Message{
+    width: 90%;
+}
+.ContactMe button{
+    width: 90%;
+}
+.Footer{
+    height: 1600px;
+}
+.w1{
+    left: 100px;
+    top: 50px;
+}
+.w2{
+   left: 600px;
+    top: 50px;
+}
+.w3{
+    display: none;
+}
 
 }
 
@@ -967,7 +1012,42 @@ width: 90%;
 right: 130px;
 bottom: 300px;
 }
+.ABOUT{
+    justify-content: center;
+    
+}
+.MyProject{
+    justify-content: center;
+}
+.Education{
+    width: 500px;
+}
+.Experience{
+    width: 500px;
+}
 
 
+.FInto{
+    width: 90%;
+}
+.Contact{
+    justify-content: space-between;
+    gap: 20px;
+}
+.Mail{
+    width: 450px;
+}
+.ContactMe{
+    width: 450px;
+}
+.ContactMe input{
+    width: 90%;
+}
+.Message{
+    width: 90%;
+}
+.ContactMe button{
+    width: 90%;
+}
 
 }
